@@ -1,6 +1,6 @@
 
 file {
-	name="/opt/rtcds/rtscore/branch-2.9/src/epics/util/SDF_TABLE.adl"
+	name="/opt/rtcds/rtscore/trunk/src/epics/util/SDF_TABLE.adl"
 	version=030107
 }
 display {
@@ -174,6 +174,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -190,6 +191,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -206,6 +208,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -222,6 +225,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -238,6 +242,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -254,6 +259,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -270,6 +276,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -286,6 +293,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -302,6 +310,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -318,6 +327,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -536,6 +546,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -552,6 +563,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -568,6 +580,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -584,6 +597,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -600,6 +614,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -616,6 +631,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -632,6 +648,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -648,6 +665,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -664,6 +682,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -680,6 +699,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1062,6 +1082,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1078,6 +1099,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1094,6 +1116,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1110,6 +1133,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1126,6 +1150,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1142,6 +1167,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1158,6 +1184,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1174,6 +1201,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1190,6 +1218,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1206,6 +1235,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1222,6 +1252,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1238,6 +1269,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1254,6 +1286,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1270,6 +1303,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1286,6 +1320,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1302,6 +1337,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1318,6 +1354,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1334,6 +1371,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1350,6 +1388,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1366,6 +1405,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1382,6 +1422,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1398,6 +1439,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1414,6 +1456,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1430,6 +1473,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1446,6 +1490,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1462,6 +1507,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1478,6 +1524,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1494,6 +1541,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1510,6 +1558,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1526,6 +1575,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1542,6 +1592,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1558,6 +1609,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1574,6 +1626,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1590,6 +1643,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1606,6 +1660,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1622,6 +1677,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1638,6 +1694,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1654,6 +1711,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1670,6 +1728,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1686,6 +1745,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1862,6 +1922,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1878,6 +1939,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1894,6 +1956,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1910,6 +1973,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1926,6 +1990,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1942,6 +2007,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1958,6 +2024,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1974,6 +2041,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -1990,6 +2058,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2006,6 +2075,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2182,6 +2252,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2198,6 +2269,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2214,6 +2286,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2230,6 +2303,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2246,6 +2320,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2262,6 +2337,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2278,6 +2354,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2294,6 +2371,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2310,6 +2388,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2326,6 +2405,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2342,6 +2422,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2358,6 +2439,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2374,6 +2456,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2390,6 +2473,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2406,6 +2490,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2422,6 +2507,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2438,6 +2524,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2454,6 +2541,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2470,6 +2558,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2486,6 +2575,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2502,6 +2592,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2518,6 +2609,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2534,6 +2626,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2550,6 +2643,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2566,6 +2660,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2582,6 +2677,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2598,6 +2694,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2614,6 +2711,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2630,6 +2728,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2646,6 +2745,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2662,6 +2762,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2678,6 +2779,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2694,6 +2796,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2710,6 +2813,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2726,6 +2830,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2742,6 +2847,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2758,6 +2864,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2774,6 +2881,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2790,6 +2898,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2806,6 +2915,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2982,6 +3092,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -2998,6 +3109,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3014,6 +3126,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3030,6 +3143,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3046,6 +3160,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3062,6 +3177,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3078,6 +3194,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3094,6 +3211,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3110,6 +3228,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3126,6 +3245,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3142,6 +3262,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3158,6 +3279,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3174,6 +3296,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3190,6 +3313,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3206,6 +3330,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3222,6 +3347,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3238,6 +3364,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3254,6 +3381,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3270,6 +3398,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3286,6 +3415,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3302,6 +3432,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3318,6 +3449,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3334,6 +3466,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3350,6 +3483,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3366,6 +3500,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3382,6 +3517,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3398,6 +3534,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3414,6 +3551,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3430,6 +3568,7 @@ text {
 		bclr=50
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
@@ -3446,6 +3585,7 @@ text {
 		bclr=1
 	}
 	align="horiz. centered"
+	format="string"
 	limits {
 	}
 }
