@@ -1,7 +1,10 @@
 ==================================================================================================
 Changes for 2.9.1 release 
 ==================================================================================================
-- Added a third output, STATE, to the DacKillIop part. This is in response to Bug #799.
+- Bug Fix (799) Added a third output, STATE, to the DacKillIop part.
+- Bug Fix (763).
+- Bug Fix (802): Changed SDF reporting records from string type to waveform type to allow >40
+  character strings to be reported to SDF MEDM screens.
 ==================================================================================================
 Changes for 2.9 release 
 ==================================================================================================
